Stdout and stderr are now separate from result map making serialization of both easier.